force-app/main/default/objects/RTL_Campaign_Running_No__c/RTL_Campaign_Running_No__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Campaign Running No.</label>
</CustomObject>