force-app/main/default/objects/RTL_Campaign_Running_No__c/fields/DateValue__c.field-meta.xml
<CustomField>
    <fullName>DateValue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DateValue</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>