force-app/main/default/objects/RTL_Campaign_Running_No__c/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Day</label>
    <length>2</length>
    <type>Text</type>
</CustomField>