force-app/main/default/objects/RTL_Campaign_Running_No__c/fields/Running_No__c.field-meta.xml
<CustomField>
    <fullName>Running_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Running No</label>
    <length>2</length>
    <type>Text</type>
</CustomField>